<resources>
    <string name="app_name">ChowChow</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="login_with_facebook">Đăng nhập với Facebook</string>
    <string name="login_with_gmail">Đăng nhập với Gmail</string>
    <string name="login">Đăng nhập</string>
    <string name="sign_up">Đăng ký</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Trang chủ</string>
    <string name="title_schedule">Lịch trình</string>
    <string name="title_tour">Gợi ý tour</string>
    <string name="title_map">Bản đồ</string>
    <string name="title_account">Tài khoản</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <string name="facebook_app_id">462516027488890</string>
    <string name="fb_login_protocol_scheme">fb462516027488890</string>


    <string name="permission_denied_explanation">
        Permission was denied, but is needed. Go to Settings.
    </string>

    <string name="settings">Settings</string>
    <string name="ok">OK</string>

    <string name="scanning">
        Scanning for beacons&#8230;
    </string>

    <string name="one_message">
        Scanning. Found 1 message
    </string>

    <string name="many_messages">
        Scanning. Found %1$d messages
    </string>

    <string name="permission_denied">
        Permission to use Nearby denied. Cannot subscribe.
    </string>
</resources>
