<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home"
            android:textSize="1sp"
            android:title="@string/title_home"/>

    <item
            android:id="@+id/navigation_schedule"
            android:icon="@drawable/ic_schedule_black_24dp"
            android:textSize="1sp"
            android:title="@string/title_schedule"/>

    <item
            android:id="@+id/navigation_tour"
            android:icon="@drawable/ic_highlight_black_24dp"
            android:textSize="1sp"
            android:title="@string/title_tour"/>

    <item
            android:id="@+id/navigation_map"
            android:icon="@drawable/ic_map_black_24dp"
            android:textSize="1sp"
            android:title="@string/title_map"/>

    <item
            android:id="@+id/navigation_account"
            android:icon="@drawable/ic_account_box_black_24dp"
            android:textSize="1sp"
            android:title="@string/title_account"/>
</menu>
